@@ -162,20 +162,6 @@ name|lucene
 operator|.
 name|index
 operator|.
-name|MultiFields
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
 name|OrdTermState
 import|;
 end_import
@@ -1045,6 +1031,114 @@ expr_stmt|;
 block|}
 block|}
 decl_stmt|;
+DECL|method|initReader
+specifier|private
+name|void
+name|initReader
+parameter_list|(
+name|IndexReader
+name|reader
+parameter_list|)
+block|{
+if|if
+condition|(
+name|reader
+operator|instanceof
+name|SegmentReader
+condition|)
+block|{
+operator|(
+operator|(
+name|SegmentReader
+operator|)
+name|reader
+operator|)
+operator|.
+name|addCoreClosedListener
+argument_list|(
+name|purgeCore
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|reader
+operator|.
+name|getSequentialSubReaders
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|(
+literal|"Please use SlowMultiReaderWrapper, if you really need a top level FieldCache"
+argument_list|)
+throw|;
+block|}
+else|else
+block|{
+comment|// we have a slow reader of some sort, try to register a purge event
+comment|// rather than relying on gc:
+name|Object
+name|key
+init|=
+name|reader
+operator|.
+name|getCoreCacheKey
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|key
+operator|instanceof
+name|IndexReader
+condition|)
+block|{
+operator|(
+operator|(
+name|IndexReader
+operator|)
+name|key
+operator|)
+operator|.
+name|addReaderClosedListener
+argument_list|(
+operator|new
+name|IndexReader
+operator|.
+name|ReaderClosedListener
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|onClose
+parameter_list|(
+name|IndexReader
+name|reader
+parameter_list|)
+block|{
+name|FieldCache
+operator|.
+name|DEFAULT
+operator|.
+name|purge
+argument_list|(
+name|reader
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 comment|/** Expert: Internal cache. */
 DECL|class|Cache
 specifier|abstract
@@ -1052,17 +1146,6 @@ specifier|static
 class|class
 name|Cache
 block|{
-DECL|method|Cache
-name|Cache
-parameter_list|()
-block|{
-name|this
-operator|.
-name|wrapper
-operator|=
-literal|null
-expr_stmt|;
-block|}
 DECL|method|Cache
 name|Cache
 parameter_list|(
@@ -1234,40 +1317,13 @@ argument_list|,
 name|innerCache
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|reader
-operator|instanceof
-name|SegmentReader
-condition|)
-block|{
-operator|(
-operator|(
-name|SegmentReader
-operator|)
-name|reader
-operator|)
-operator|.
-name|addCoreClosedListener
-argument_list|(
 name|wrapper
 operator|.
-name|purgeCore
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|reader
-operator|.
-name|addReaderClosedListener
+name|initReader
 argument_list|(
-name|wrapper
-operator|.
-name|purgeReader
+name|reader
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 if|if
 condition|(
@@ -1377,40 +1433,13 @@ argument_list|,
 name|innerCache
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|reader
-operator|instanceof
-name|SegmentReader
-condition|)
-block|{
-operator|(
-operator|(
-name|SegmentReader
-operator|)
-name|reader
-operator|)
-operator|.
-name|addCoreClosedListener
-argument_list|(
 name|wrapper
 operator|.
-name|purgeCore
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|reader
-operator|.
-name|addReaderClosedListener
+name|initReader
 argument_list|(
-name|wrapper
-operator|.
-name|purgeReader
+name|reader
 argument_list|)
 expr_stmt|;
-block|}
 name|value
 operator|=
 literal|null
@@ -2036,12 +2065,10 @@ decl_stmt|;
 name|Terms
 name|terms
 init|=
-name|MultiFields
-operator|.
-name|getTerms
-argument_list|(
 name|reader
-argument_list|,
+operator|.
+name|terms
+argument_list|(
 name|field
 argument_list|)
 decl_stmt|;
@@ -2454,12 +2481,10 @@ decl_stmt|;
 name|Terms
 name|terms
 init|=
-name|MultiFields
-operator|.
-name|getTerms
-argument_list|(
 name|reader
-argument_list|,
+operator|.
+name|terms
+argument_list|(
 name|field
 argument_list|)
 decl_stmt|;
@@ -3021,12 +3046,10 @@ decl_stmt|;
 name|Terms
 name|terms
 init|=
-name|MultiFields
-operator|.
-name|getTerms
-argument_list|(
 name|reader
-argument_list|,
+operator|.
+name|terms
+argument_list|(
 name|field
 argument_list|)
 decl_stmt|;
@@ -3385,12 +3408,10 @@ decl_stmt|;
 name|Terms
 name|terms
 init|=
-name|MultiFields
-operator|.
-name|getTerms
-argument_list|(
 name|reader
-argument_list|,
+operator|.
+name|terms
+argument_list|(
 name|field
 argument_list|)
 decl_stmt|;
@@ -3806,12 +3827,10 @@ decl_stmt|;
 name|Terms
 name|terms
 init|=
-name|MultiFields
-operator|.
-name|getTerms
-argument_list|(
 name|reader
-argument_list|,
+operator|.
+name|terms
+argument_list|(
 name|field
 argument_list|)
 decl_stmt|;
@@ -4280,12 +4299,10 @@ decl_stmt|;
 name|Terms
 name|terms
 init|=
-name|MultiFields
-operator|.
-name|getTerms
-argument_list|(
 name|reader
-argument_list|,
+operator|.
+name|terms
+argument_list|(
 name|field
 argument_list|)
 decl_stmt|;
@@ -4755,12 +4772,10 @@ decl_stmt|;
 name|Terms
 name|terms
 init|=
-name|MultiFields
-operator|.
-name|getTerms
-argument_list|(
 name|reader
-argument_list|,
+operator|.
+name|terms
+argument_list|(
 name|field
 argument_list|)
 decl_stmt|;
@@ -5973,12 +5988,10 @@ block|{
 name|Terms
 name|terms
 init|=
-name|MultiFields
-operator|.
-name|getTerms
-argument_list|(
 name|reader
-argument_list|,
+operator|.
+name|terms
+argument_list|(
 name|entryKey
 operator|.
 name|field
@@ -6671,12 +6684,10 @@ block|{
 name|Terms
 name|terms
 init|=
-name|MultiFields
-operator|.
-name|getTerms
-argument_list|(
 name|reader
-argument_list|,
+operator|.
+name|terms
+argument_list|(
 name|entryKey
 operator|.
 name|field
