@@ -4125,10 +4125,14 @@ name|DEFAULT
 operator|.
 name|getInts
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|searcher
 operator|.
 name|getIndexReader
 argument_list|()
+argument_list|)
 argument_list|,
 literal|"trieInt"
 argument_list|,
@@ -4167,10 +4171,14 @@ name|DEFAULT
 operator|.
 name|getLongs
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|searcher
 operator|.
 name|getIndexReader
 argument_list|()
+argument_list|)
 argument_list|,
 literal|"trieLong"
 argument_list|,
