@@ -1134,7 +1134,11 @@ expr_stmt|;
 block|}
 name|verify
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|r
+argument_list|)
 argument_list|,
 name|idToOrds
 argument_list|,
@@ -1923,7 +1927,11 @@ expr_stmt|;
 block|}
 name|verify
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|r
+argument_list|)
 argument_list|,
 name|idToOrdsPrefix
 argument_list|,
