@@ -11277,7 +11277,11 @@ name|DEFAULT
 operator|.
 name|getTermsIndex
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|reader
+argument_list|)
 argument_list|,
 literal|"content"
 argument_list|,
