@@ -804,12 +804,21 @@ name|doc
 argument_list|)
 expr_stmt|;
 block|}
-name|reader
-operator|=
+name|IndexReader
+name|r
+init|=
 name|writer
 operator|.
 name|getReader
 argument_list|()
+decl_stmt|;
+name|reader
+operator|=
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
+name|r
+argument_list|)
 expr_stmt|;
 name|writer
 operator|.
@@ -2768,13 +2777,22 @@ argument_list|,
 literal|true
 argument_list|)
 decl_stmt|;
+name|SlowMultiReaderWrapper
+name|reader
+init|=
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
+name|r
+argument_list|)
+decl_stmt|;
 name|FieldCache
 operator|.
 name|DEFAULT
 operator|.
 name|getTerms
 argument_list|(
-name|r
+name|reader
 argument_list|,
 literal|"foobar"
 argument_list|)
@@ -2785,7 +2803,7 @@ name|DEFAULT
 operator|.
 name|getTermsIndex
 argument_list|(
-name|r
+name|reader
 argument_list|,
 literal|"foobar"
 argument_list|)
