@@ -122,6 +122,20 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|index
+operator|.
+name|SlowMultiReaderWrapper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|store
 operator|.
 name|Directory
@@ -603,7 +617,11 @@ name|cache
 operator|.
 name|getDoubles
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|readerA
+argument_list|)
 argument_list|,
 literal|"theDouble"
 argument_list|,
@@ -614,7 +632,11 @@ name|cache
 operator|.
 name|getDoubles
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|readerA
+argument_list|)
 argument_list|,
 literal|"theDouble"
 argument_list|,
@@ -629,7 +651,11 @@ name|cache
 operator|.
 name|getDoubles
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|readerB
+argument_list|)
 argument_list|,
 literal|"theDouble"
 argument_list|,
@@ -644,7 +670,11 @@ name|cache
 operator|.
 name|getInts
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|readerX
+argument_list|)
 argument_list|,
 literal|"theInt"
 argument_list|,
@@ -655,7 +685,11 @@ name|cache
 operator|.
 name|getInts
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|readerX
+argument_list|)
 argument_list|,
 literal|"theInt"
 argument_list|,
@@ -744,7 +778,11 @@ name|cache
 operator|.
 name|getInts
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|readerX
+argument_list|)
 argument_list|,
 literal|"theInt"
 argument_list|,
@@ -759,7 +797,11 @@ name|cache
 operator|.
 name|getTerms
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|readerX
+argument_list|)
 argument_list|,
 literal|"theInt"
 argument_list|)
@@ -768,7 +810,11 @@ name|cache
 operator|.
 name|getBytes
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|readerX
+argument_list|)
 argument_list|,
 literal|"theByte"
 argument_list|,
@@ -866,7 +912,11 @@ name|cache
 operator|.
 name|getTerms
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|readerA
+argument_list|)
 argument_list|,
 literal|"theString"
 argument_list|)
@@ -874,8 +924,12 @@ expr_stmt|;
 name|cache
 operator|.
 name|getTerms
+argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
 argument_list|(
 name|readerB
+argument_list|)
 argument_list|,
 literal|"theString"
 argument_list|)
@@ -884,7 +938,11 @@ name|cache
 operator|.
 name|getTerms
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|readerX
+argument_list|)
 argument_list|,
 literal|"theString"
 argument_list|)
@@ -893,7 +951,11 @@ name|cache
 operator|.
 name|getBytes
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|readerX
+argument_list|)
 argument_list|,
 literal|"theByte"
 argument_list|,
