@@ -5985,7 +5985,11 @@ name|DEFAULT
 operator|.
 name|getInts
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|r
+argument_list|)
 argument_list|,
 literal|"id"
 argument_list|,
@@ -6222,7 +6226,11 @@ name|DEFAULT
 operator|.
 name|getInts
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|rBlocks
+argument_list|)
 argument_list|,
 literal|"id"
 argument_list|,
