@@ -54,6 +54,20 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|SlowMultiReaderWrapper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|Term
 import|;
 end_import
@@ -2524,10 +2538,14 @@ name|DEFAULT
 operator|.
 name|getTermsIndex
 argument_list|(
+operator|new
+name|SlowMultiReaderWrapper
+argument_list|(
 name|searcher
 operator|.
 name|getIndexReader
 argument_list|()
+argument_list|)
 argument_list|,
 name|f
 argument_list|)
